[gd_scene load_steps=30 format=3 uid="uid://c2pyfkcc5qevs"]

[ext_resource type="PackedScene" uid="uid://crmbqldvypv24" path="res://entities/curtis.tscn" id="1_bnq6j"]
[ext_resource type="Script" path="res://levels/game_manager.gd" id="1_tj3jl"]
[ext_resource type="AudioStream" uid="uid://crb2pcfx5w4ww" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Samples/Fishing Pole/Item Catch_/Cartoon/ESM_Vibrant_Game_Drop_Hover_up_1_Arcade_Cartoon_Quirky_Comedy_Comedic_Kid_Childish_Fun_Bouncy.wav" id="2_2t4t8"]
[ext_resource type="AudioStream" uid="uid://8h4ipubfc21b" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Samples/Fishing Pole/Misc/Cartoon/FF_CRT_sfx_boing_three_eye_pop_low.wav" id="3_1c5o7"]
[ext_resource type="PackedScene" uid="uid://c16o0epi7dc3" path="res://UI/tutorial_text.tscn" id="3_mhy6w"]
[ext_resource type="PackedScene" uid="uid://bgouue1wlme4b" path="res://components/fishing_zone.tscn" id="4_7dt12"]
[ext_resource type="AudioStream" uid="uid://desqtwcsnwejd" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Samples/Fishing Pole/Line Cast_/Cartoon/FF_CRT_sfx_siren_slip_wee_d.wav" id="4_wem3t"]
[ext_resource type="Resource" uid="uid://dhke5qpi5pd0n" path="res://items/Salmon.tres" id="5_l7l2m"]
[ext_resource type="Resource" uid="uid://bsedf2j7em8u8" path="res://items/CatFish.tres" id="5_q5lcc"]
[ext_resource type="Resource" uid="uid://2qdgwm5xoya2" path="res://items/CrocShoe.tres" id="6_y2vfa"]
[ext_resource type="AudioStream" uid="uid://dekrrbjinxf23" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Samples/Comedy/HumanFartSmall_S08HU.230.wav" id="7_7k0f1"]
[ext_resource type="PackedScene" uid="uid://cjul85ld57hih" path="res://components/fishing_zone_lv_2.tscn" id="7_qx8l1"]
[ext_resource type="Resource" uid="uid://de2vijotixh4k" path="res://items/GoldTooth.tres" id="7_qy2ml"]
[ext_resource type="AudioStream" uid="uid://bf4egleg4giet" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Samples/Comedy/human_trumpet_fart_e_09.wav" id="8_g6nwn"]
[ext_resource type="PackedScene" uid="uid://drk8622ylr3vq" path="res://components/fishing_zone_lv_3.tscn" id="8_iupue"]
[ext_resource type="Resource" uid="uid://ci7cb5hibxuh2" path="res://items/JesusFish.tres" id="8_ugcjr"]
[ext_resource type="AudioStream" uid="uid://b74750qfekqgi" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Samples/Comedy/wet_fart_sample.wav" id="9_68qq7"]
[ext_resource type="Resource" uid="uid://3yusqhb0pf0f" path="res://items/Moonshine.tres" id="9_acgq3"]
[ext_resource type="PackedScene" uid="uid://cdmu8dmjkentv" path="res://components/fishing_zonelv_4.tscn" id="9_ib4ob"]
[ext_resource type="Resource" uid="uid://b1j3yfji02jma" path="res://items/OldBoot.tres" id="10_s1mgc"]
[ext_resource type="AudioStream" uid="uid://c4huleaavregg" path="res://assets/audio/GGL - Redneck Fishing/GGL - Redneck Fishing_/Music/Gameplay Music/GGL_-_Redneck_Fishing_3.wav" id="10_upslj"]
[ext_resource type="PackedScene" uid="uid://cqqjao5hwaxgy" path="res://UI/reward_ui.tscn" id="11_8b3e7"]
[ext_resource type="Resource" uid="uid://l8v0abfjogvi" path="res://items/PBR.tres" id="11_gff6f"]
[ext_resource type="PackedScene" uid="uid://vxm4pou8n1l8" path="res://UI/score_summary.tscn" id="11_mu4n3"]
[ext_resource type="Resource" uid="uid://crgbgb4c18yjj" path="res://items/RetroCassette.tres" id="12_3d2bq"]
[ext_resource type="Resource" uid="uid://b01kj0i0r4vrc" path="res://items/Smokes.tres" id="14_fqy66"]
[ext_resource type="TileSet" uid="uid://ct6g77qyj1nnq" path="res://new_tile_set.tres" id="18_sbh5v"]
[ext_resource type="PackedScene" uid="uid://b1wycb388itey" path="res://UI/time_background.tscn" id="23_8jsgw"]
[ext_resource type="Theme" uid="uid://connr2v5ga1ky" path="res://DefaultTheme.tres" id="26_47lan"]

[node name="mainlevel" type="Node2D" node_paths=PackedStringArray("ScoreText", "TimeText", "EndGameScene", "reward_instance")]
script = ExtResource("1_tj3jl")
ScoreText = NodePath("ScoreUI")
TimeText = NodePath("TimeOfDayText")
EndGameScene = NodePath("score_summary")
success = ExtResource("2_2t4t8")
fail = ExtResource("3_1c5o7")
cast = ExtResource("4_wem3t")
fart1 = ExtResource("7_7k0f1")
fart2 = ExtResource("8_g6nwn")
fart3 = ExtResource("9_68qq7")
Items = Array[Resource("res://items/ItemData.gd")]([ExtResource("5_q5lcc"), ExtResource("6_y2vfa"), ExtResource("7_qy2ml"), ExtResource("8_ugcjr"), ExtResource("9_acgq3"), ExtResource("10_s1mgc"), ExtResource("11_gff6f"), ExtResource("12_3d2bq"), ExtResource("5_l7l2m"), ExtResource("14_fqy66")])
reward_instance = NodePath("RewardUI")

[node name="TimeBackground" parent="." instance=ExtResource("23_8jsgw")]
offset_left = 45.0
offset_top = -39.0
offset_right = 557.0
offset_bottom = 473.0
rotation = 3.14159

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(300, 744)
scale = Vector2(0.2, 0.2)
tile_set = ExtResource("18_sbh5v")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(5, 2, 0, 3, 2, 0, 1, 2, 0, 65535, 2, 0, 65533, 2, 0, 65531, 2, 0, 65529, 2, 0, -65543, 4, 0, -65542, 4, 0, -65541, 4, 0, -65540, 4, 0, -65539, 4, 0, -65538, 4, 0, -65537, 4, 0, -131072, 4, 0, -131071, 4, 0, -131070, 4, 0, -131069, 4, 0, -131068, 4, 0, -131067, 4, 0, -196603, 4, 0, -262139, 4, 0, -327675, 4, 0, -327676, 4, 0, -327677, 4, 0, -262141, 4, 0, -262142, 4, 0, -262143, 4, 0, -262144, 4, 0, -327680, 4, 0, -262145, 4, 0, -262146, 4, 0, -262147, 4, 0, -262148, 4, 0, -196613, 4, 0, -196614, 4, 0, -196615, 4, 0, -196612, 4, 0, -196611, 4, 0, -196610, 4, 0, -196609, 4, 0, -327684, 4, 0, -327685, 4, 0, -327686, 4, 0, -327683, 4, 0, -327682, 4, 0, -327681, 4, 0, -393216, 4, 0, -393215, 4, 0, -393214, 4, 0, -393213, 4, 0, -393212, 4, 0, -393211, 4, 0, -458747, 4, 0, -458748, 4, 0, -458749, 4, 0, -458750, 4, 0, -458751, 4, 0, -458752, 4, 0, -393217, 4, 0, -393218, 4, 0, -393219, 4, 0, -393220, 4, 0, -393221, 4, 0, -393222, 4, 0, -524294, 4, 0, -524293, 4, 0, -524292, 4, 0, -524291, 4, 0, -524290, 4, 0, -524289, 4, 0, -589824, 4, 0, -589823, 4, 0, -524287, 4, 0, -524286, 4, 0, -524285, 4, 0, -589821, 4, 0, -589820, 4, 0, -589819, 4, 0, -655355, 4, 0, -655356, 4, 0, -655357, 4, 0, -655358, 4, 0, -655359, 4, 0, -655360, 4, 0, -589825, 4, 0, -589826, 4, 0, -589827, 4, 0, -589828, 4, 0, -589829, 4, 0, -589830, 4, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_upslj")
autoplay = true

[node name="TutorialText" parent="." instance=ExtResource("3_mhy6w")]
offset_left = 1.0
offset_top = 683.0
offset_right = 201.0
offset_bottom = 747.0

[node name="fishing_zones" type="Node2D" parent="."]

[node name="fishing_zone" parent="fishing_zones" node_paths=PackedStringArray("game_manager") instance=ExtResource("4_7dt12")]
position = Vector2(40, 529)
game_manager = NodePath("../..")
rarity = 2

[node name="fishing_zone2" parent="fishing_zones" node_paths=PackedStringArray("game_manager") instance=ExtResource("4_7dt12")]
position = Vector2(85, 260)
game_manager = NodePath("../..")

[node name="fishing_zone3" parent="fishing_zones" node_paths=PackedStringArray("game_manager") instance=ExtResource("4_7dt12")]
position = Vector2(321, 334)
game_manager = NodePath("../..")

[node name="fishing_zoneLv2" parent="fishing_zones" node_paths=PackedStringArray("game_manager") instance=ExtResource("7_qx8l1")]
position = Vector2(528, 281)
game_manager = NodePath("../..")
rarity = 3

[node name="fishing_zone_lv3" parent="fishing_zones" node_paths=PackedStringArray("game_manager") instance=ExtResource("8_iupue")]
position = Vector2(197, 459)
game_manager = NodePath("../..")
rarity = 4

[node name="fishing_zonelv4" parent="fishing_zones" node_paths=PackedStringArray("game_manager") instance=ExtResource("9_ib4ob")]
position = Vector2(483, 478)
game_manager = NodePath("../..")
rarity = 5

[node name="Curtis" parent="." node_paths=PackedStringArray("game_manager", "tut_text") instance=ExtResource("1_bnq6j")]
position = Vector2(300, 744)
game_manager = NodePath("..")
tut_text = NodePath("../TutorialText")
line_degree_limit = 40.0

[node name="ScoreUI" type="RichTextLabel" parent="."]
offset_left = 19.0
offset_top = 15.0
offset_right = 148.0
offset_bottom = 65.0
theme = ExtResource("26_47lan")
text = "Score: 0"

[node name="TimeOfDayText" type="RichTextLabel" parent="."]
offset_left = 451.0
offset_top = 17.0
offset_right = 580.0
offset_bottom = 67.0
theme = ExtResource("26_47lan")
text = "Time Of Day"

[node name="RewardUI" parent="." instance=ExtResource("11_8b3e7")]
visible = false
offset_left = 54.0
offset_top = 301.0
offset_right = 54.0
offset_bottom = 301.0

[node name="score_summary" parent="." instance=ExtResource("11_mu4n3")]
visible = false
offset_left = 61.0
offset_top = 194.0
offset_right = 61.0
offset_bottom = 194.0

[node name="AudioStreamSFX" type="AudioStreamPlayer" parent="."]
